--- a/GMI-SC/Anchor.toml
+++ b/GMI-SC/Anchor.toml
@@ -1,17 +1,18 @@
 [toolchain]
+anchor_version = "0.30.1"
 
 [features]
 resolution = true
 skip-lint = false
 
 [programs.devnet]
-gimme_idea = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+gimme_idea = "3Yd8YpMWvBkStV4dXwhem5czcKkDqtwekXKLs8zE6Zqg"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Devnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
