--- a/GMI-BE/nixpacks.toml
+++ b/GMI-BE/nixpacks.toml
@@ -9,3 +9,6 @@ cmds = ["npx prisma generate", "npm run build"]
 
 [start]
 cmd = "npm start"
+
+[variables]
+PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING = "1"
