--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
     "react-markdown": "latest",
     "react-syntax-highlighter": "latest",
     "recharts": "latest",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "latest",
     "tailwindcss": "^3.3.0",
     "zod": "latest",
