Fix: Markdown newlines and duplicate post display

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "recharts": "latest",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "remark-breaks": "^4.0.0",
     "tailwind-merge": "latest",
     "tailwindcss": "^3.3.0",
     "zod": "latest",
