--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.32.1",
     "@hookform/resolvers": "latest",
     "@lazorkit/wallet": "^2.0.0",
     "@solana-mobile/wallet-adapter-mobile": "^2.2.5",
+    "@solana/kora": "^0.1.0",
     "@solana/spl-token": "^0.4.14",
     "@solana/wallet-adapter-react": "latest",
     "@solana/wallet-adapter-react-ui": "latest",
@@ -30,6 +32,7 @@
     "react-dom": "^18",
     "react-hook-form": "latest",
     "react-hot-toast": "latest",
+    "react-is": "^19.2.3",
     "react-markdown": "latest",
     "react-syntax-highlighter": "latest",
     "recharts": "latest",
