Update LazorKit paymaster URL to kora.devnet.lazorkit.com and add CORS

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -10,3 +10,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 # Solana Configuration
 NEXT_PUBLIC_SOLANA_NETWORK=devnet
 NEXT_PUBLIC_SOLANA_RPC_URL=https://devnet.helius-rpc.com/?api-key=YOUR_HELIUS_API_KEY
+
+# LazorKit Passkey Wallet Configuration
+NEXT_PUBLIC_LAZORKIT_PAYMASTER_URL=https://kora.devnet.lazorkit.com/
