Feat: find related Projects Detection with AI

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,3 +18,10 @@ SOLANA_RPC_URL=https://mainnet.helius-rpc.com/?api-key=YOUR_HELIUS_API_KEY
 # Development: http://localhost:3000
 # Production: https://gimmeidea.com
 FRONTEND_URL=http://localhost:3000
+
+# OpenAI Configuration (for AI feedback)
+OPENAI_API_KEY=your_openai_api_key
+
+# Tavily API Configuration (for related projects detection)
+# Get your API key at: https://tavily.com
+TAVILY_API_KEY=your_tavily_api_key
